@@ -177,3 +177,5 @@
 	* Removed the hostname from the Software Authority Protocol long
 	Source and Destination name fields in
 	'src/lwnetrouterd/protocol_sap.cpp'.
+2016-12-13 Fred Gleason <fredg@paravelsystems.com>
+	* Implemented an 'OFF' source in 'src/lwnetrouterd/protocol_sap.cpp'.
